// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should render component with default icon: Icon component - name: default 1`] = `
<Text
  accessibilityRole="text"
  style={
    Object {
      "color": "#333333",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-default-mockup"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "filled-action-add": Icon component - name: filled-action-add 1`] = `
<Text
  accessibilityRole="text"
  style={
    Object {
      "color": "#333333",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-filled-action-add"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "outlined-action-micrec": Icon component - name: outlined-action-micrec 1`] = `
<Text
  accessibilityRole="text"
  style={
    Object {
      "color": "#333333",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-action-micrec"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "outlined-content-wellness": Icon component - name: outlined-content-wellness 1`] = `
<Text
  accessibilityRole="text"
  style={
    Object {
      "color": "#333333",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-content-wellness"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "outlined-finance-bank": Icon component - name: outlined-finance-bank 1`] = `
<Text
  accessibilityRole="text"
  style={
    Object {
      "color": "#333333",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-finance-bank"
>
  
</Text>
`;
